# nmh_reverse

./: .gitignore  404.html  README.md  gm2_mangler.py  gmf2_mangler.py  index.html  mkdocs.yml  nmh_gcl.ksy  nmh_gcl.py  nmh_gcl_run.py  nmh_gm2.ksy  nmh_gm2.py  nmh_gm2_run.py  pyproject.toml  reset_files.py  sitemap.xml  unpack_all.py  unpack_flcg.py  unpack_gct0.py  unpack_gmf2.py
.github/workflows/: docs.yml
blender/: recursive_obj.py
docs/: index.md
docs/formats/: flcg.md  gct0.md  gmf2.md  index.md
docs/games/: nmh.md
docs/games/NMH/: Files RNHE41.md  index.md
docs/stylesheets/: extra.css
docs/tools/: DolphinTextureExtraction-tool.md  index.md  kaitaistruct.md  nmh_reverse_scripts.md  tcp-23-gmf2-tools.md
formats/: index.html
formats/flcg/: index.html
formats/gct0/: index.html
formats/gmf2/: index.html
games/NMH/: index.html
games/NMH/Files RNHE41/: index.html
lib/: reset_files.py
lib/kaitai_defs/: flcg.ksy  flcg.py  gmf2.ksy  gmf2.py  nmh_gcl.ksy  nmh_gm2.ksy  nmh_gm2.py
search/: search_index.json
tools/: index.html
tools/DolphinTextureExtraction-tool/: index.html
tools/kaitaistruct/: index.html
tools/nmh_reverse_scripts/: index.html
tools/tcp-23-gmf2-tools/: index.html
